Fri Aug  2 18:00:46 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenu.c: Fix menus resizing dynamically while
	they are popped up or torn off. (#78949)

Fri Aug  2 16:38:34 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkregion-generic.c: Comprehensively add
	g_return_[val]if_fail() statements. (#89491, Robin Lu)

Fri Aug  2 16:24:32 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkmain-x11.c: Remove references to 
	gdk_initialized (#81060, Jacob Berkman)
	
	* gdk/gdk.c (gdk_exit): Remove gdk_exit_func().

Fri Aug  2 15:56:47 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkscreen-x11.c (gdk_screen_x11_dispose): Fix
	args to pango_x_shutdown_display().

	* gdk/linux-fb/gdkinput.c gdk/linux-fb/gdkinputprivate.h
	gdk/win32/gdkinput-win32.[ch] gdk/win32/gdkinput.c
	gdk/win32/gdkwindow-win32.c gdk/x11/gdkinput-x11.c
	gdk/x11/gdkinput-xfree.c gdk/x11/gdkinput.c
	gdk/x11/gdkinputprivate.h gdk/x11/gdkwindow-x11.c: Move
	a bunch of functions gdk_input => _gdk_input. Clean
	up some header file cruft. (#79971)

Fri Aug  2 12:21:41 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkscreen-x11.c (gdk_screen_x11_dispose):
	Call pango_x[ft]_shutdown_display().

2002-08-02  jacob berkman  <jacob@ximian.com>

	* gdk/x11/gdkscreen-x11.c (check_xfree_xinerama): declare
	screen_x11 variable to fix build w/ xinerama

Fri Aug  2 00:43:15 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdrawable-x11.[ch] gdk/x11/gdkgc-x11.c
	gdk/x11/gdkpango-x11.c gdk/x11/gdkpixmap-x11.c 
	gdk/x11/gdkprivate-x11.h gdk/x11/gdkwindow-x11.c:
	Switch back to using XftDraw so that we take 
	advantage of the draw-to-non-RENDER capabilities
	of Xft2.

	* demos/gtk-demo/changedisplay.c (query_for_toplevel): 
	Fix the case where the user clicks on the "click on
	a window popup".

Thu Aug  1 19:09:39 2002  Owen Taylor  <otaylor@redhat.com>

	* demos/gtk-demo/changedisplay.c: New demo for
	window migration between different displays and screens.

	* gtk/gtkrc.c gtkstyle.[ch]: Add