@@ -1,3 +1,8 @@
+2002-08-04  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkmain.c (gtk_check_version): Fix for binary compatibility
+	across 2.x.y.
+
 Fri Aug  2 18:00:46 2002  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkmenu.c: Fix menus resizing dynamically while
